--- a/website_grocery.ipynb
+++ b/website_grocery.ipynb
@@ -954,7 +954,7 @@
    "metadata": {},
    "source": [
     "*Calculate of sample size = \n",
-    "n = 16(0.5)2 / 0.022  = 10.000 users in each variant*"
+    "n = 16(0.5)^2 / 0.02^2  = 10.000 users in each variant*"
    ]
   },
   {
@@ -1139,7 +1139,7 @@
    "source": [
     "#choose sample on control\n",
     "sample_data_control = data[data['Group']=='Control'].sample(n = n,\n",
-    "                                                              replace = False)\n",
+    "                                                            replace = False)\n",
     "#show sample on control\n",
     "sample_data_control"
    ]
@@ -1957,7 +1957,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Define null hypothesis ($H_0$) dan alternative hypothesis ($H_1$)\n",
+    "- Define null hypothesis ($H_0$) and alternative hypothesis ($H_1$)\n",
     "\n",
     ">H0 (Null Hypothesis)       : CTR New link, such as in picture not text ≤ existing link <br> \n",
     "H1 (Alternative Hypothesis) : CTR New link, such as in picture not text > existing link\n",
@@ -1979,7 +1979,7 @@
    "metadata": {},
    "source": [
     "- We need to do a statistical test to find out whether the differences obtained are statistically significant.\n",
-    "- Define $z_{\\text{crit}}$, $z_{\\text{statistics}}$ dan $\\text{p-value}$\n",
+    "- Define $z_{\\text{crit}}$, $z_{\\text{statistics}}$ and $\\text{p-value}$\n",
     "- To calculate it, we can use the `statsmodel` library"
    ]
   },
@@ -1999,7 +1999,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1. Calculate $z_{\\text{statistics}}$ dan p-value**\n",
+    "**1. Calculate $z_{\\text{statistics}}$ and p-value**\n",
     "Use this function\n",
     "```python\n",
     "test_stats, p_value = proportions_ztest(count = ...,\n",
@@ -2033,7 +2033,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Buat count convert & total observation\n",
+    "# Make count convert & total observation\n",
     "count_convert = [n_treatment_ctr, n_control_ctr]\n",
     "count_observation = [n_treatment, n_control]"
    ]
@@ -2226,7 +2226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "let's fill let's fill in the following table\n",
+    "let's fill in the following table\n",
     "\n",
     "<center>\n",
     "\n",
@@ -2501,11 +2501,6 @@
     "3. Changes to the overall appearance and content of the website: Changing the overall layout, design, and content of the website can affect the way users interact with the website.\n",
     "4. Target audience: There may be certain groups of users who are more likely to download apps than others, so changing the look and content of the website to appeal more to certain target groups could be a recommendation for future experiments."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
